--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "express": "^4.18.2",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.0.5"
   }
 }
