--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Sort to-read and already-read lists; import bibliographies with Crossref API calls.",
   "scripts": {
+    "start": "node ./src/api/server.js",
     "build": "webpack",
     "dev": "webpack serve --open & node ./src/api/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
