retitle files; correct focus on render for popupContainer

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "Sort to-read and already-read lists; import bibliographies with Crossref API calls.",
   "scripts": {
-    "start": "node ./src/api/server.js",
+    "start": "node ./src/server/server.js",
     "build": "webpack",
-    "dev": "webpack serve --open & node ./src/api/server.js",
+    "dev": "webpack serve --open & node ./src/server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Esther Witbeck",
